# UnoRtos

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  conan.profile  conan_install.sh  conanfile.py  gccavr.cmake
Inc/: FreeRTOSConfig.h  app.h  gpio.h  protected_io.h
Rtos/: CMakeLists.txt
Src/: app.c  gpio.c  main.c  protected_io.S
Uart/: CMakeLists.txt
Uart/Inc/: uart.h  uart_ll.h
Uart/Src/: sw_uart.cpp  uart.cpp  uart_ll.cpp
